--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "node": "^21.2.0"
+    "node": "^21.2.0",
+    "nodemon": "^3.0.2"
   },
   "name": "shadi-alap-server",
   "version": "1.0.0",
